feat(sheet): creation choices, subclass, and level-up ASI/feat prompts